finish surface tokens

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1425,7 +1425,7 @@
                 "value": {
                   "fontFamily": "{app.fontFamily.surface.callout.text}",
                   "fontWeight": "{app.fontWeight.surface.callout.text.default}",
-                  "lineHeight": "140%",
+                  "lineHeight": "{app.lineHeight.surface.callout.text.sm}",
                   "fontSize": "{app.fontSize.surface.callout.text.sm}"
                 },
                 "type": "typography"
@@ -1434,7 +1434,7 @@
                 "value": {
                   "fontFamily": "{app.fontFamily.surface.callout.text}",
                   "fontWeight": "{app.fontWeight.surface.callout.text.strong}",
-                  "lineHeight": "140%",
+                  "lineHeight": "{app.lineHeight.surface.callout.text.sm}",
                   "fontSize": "{app.fontSize.surface.callout.text.sm}"
                 },
                 "type": "typography"
@@ -1445,7 +1445,7 @@
                 "value": {
                   "fontFamily": "{app.fontFamily.surface.callout.text}",
                   "fontWeight": "{app.fontWeight.surface.callout.text.default}",
-                  "lineHeight": "140%",
+                  "lineHeight": "{app.lineHeight.surface.callout.text.md}",
                   "fontSize": "{app.fontSize.surface.callout.text.md}"
                 },
                 "type": "typography"
@@ -1454,7 +1454,7 @@
                 "value": {
                   "fontFamily": "{app.fontFamily.surface.callout.text}",
                   "fontWeight": "{app.fontWeight.surface.callout.text.strong}",
-                  "lineHeight": "140%",
+                  "lineHeight": "{app.lineHeight.surface.callout.text.md}",
                   "fontSize": "{app.fontSize.surface.callout.text.md}"
                 },
                 "type": "typography"
@@ -1465,7 +1465,7 @@
                 "value": {
                   "fontFamily": "{app.fontFamily.surface.callout.text}",
                   "fontWeight": "{app.fontWeight.surface.callout.text.default}",
-                  "lineHeight": "140%",
+                  "lineHeight": "{app.lineHeight.surface.callout.text.lg}",
                   "fontSize": "{app.fontSize.surface.callout.text.lg}"
                 },
                 "type": "typography"
@@ -1474,7 +1474,7 @@
                 "value": {
                   "fontFamily": "{app.fontFamily.surface.callout.text}",
                   "fontWeight": "{app.fontWeight.surface.callout.text.strong}",
-                  "lineHeight": "140%",
+                  "lineHeight": "{app.lineHeight.surface.callout.text.lg}",
                   "fontSize": "{app.fontSize.surface.callout.text.lg}"
                 },
                 "type": "typography"
@@ -1487,7 +1487,7 @@
                 "value": {
                   "fontFamily": "{app.fontFamily.surface.callout.symbol}",
                   "fontWeight": "{app.fontWeight.surface.callout.symbol.default}",
-                  "lineHeight": "140%",
+                  "lineHeight": "{app.lineHeight.surface.callout.symbol.sm}",
                   "fontSize": "{app.fontSize.surface.callout.symbol.sm}"
                 },
                 "type": "typography"
@@ -1496,7 +1496,7 @@
                 "value": {
                   "fontFamily": "{app.fontFamily.surface.callout.symbol}",
                   "fontWeight": "{app.fontWeight.surface.callout.symbol.strong}",
-                  "lineHeight": "140%",
+                  "lineHeight": "{app.lineHeight.surface.callout.symbol.sm}",
                   "fontSize": "{app.fontSize.surface.callout.symbol.sm}"
                 },
                 "type": "typography"
@@ -1507,7 +1507,7 @@
                 "value": {
                   "fontFamily": "{app.fontFamily.surface.callout.symbol}",
                   "fontWeight": "{app.fontWeight.surface.callout.symbol.default}",
-                  "lineHeight": "140%",
+                  "lineHeight": "{app.lineHeight.surface.callout.symbol.md}",
                   "fontSize": "{app.fontSize.surface.callout.symbol.md}"
                 },
                 "type": "typography"
@@ -1516,7 +1516,7 @@
                 "value": {
                   "fontFamily": "{app.fontFamily.surface.callout.symbol}",
                   "fontWeight": "{app.fontWeight.surface.callout.symbol.strong}",
-                  "lineHeight": "140%",
+                  "lineHeight": "{app.lineHeight.surface.callout.symbol.md}",
                   "fontSize": "{app.fontSize.surface.callout.symbol.md}"
                 },
                 "type": "typography"
@@ -1527,7 +1527,7 @@
                 "value": {
                   "fontFamily": "{app.fontFamily.surface.callout.symbol}",
                   "fontWeight": "{app.fontWeight.surface.callout.symbol.default}",
-                  "lineHeight": "140%",
+                  "lineHeight": "{app.lineHeight.surface.callout.symbol.lg}",
                   "fontSize": "{app.fontSize.surface.callout.symbol.lg}"
                 },
                 "type": "typography"
@@ -1536,7 +1536,7 @@
                 "value": {
                   "fontFamily": "{app.fontFamily.surface.callout.symbol}",
                   "fontWeight": "{app.fontWeight.surface.callout.symbol.strong}",
-                  "lineHeight": "140%",
+                  "lineHeight": "{app.lineHeight.surface.callout.symbol.lg}",
                   "fontSize": "{app.fontSize.surface.callout.symbol.lg}"
                 },
                 "type": "typography"
@@ -1549,7 +1549,7 @@
             "default": {
               "value": {
                 "fontFamily": "{app.fontFamily.surface.subtitle.text}",
-                "lineHeight": "140%",
+                "lineHeight": "{app.lineHeight.surface.subtitle.text}",
                 "fontWeight": "{app.fontWeight.surface.subtitle.text.default}",
                 "fontSize": "{app.fontSize.surface.subtitle.text}"
               },
@@ -1558,7 +1558,7 @@
             "strong": {
               "value": {
                 "fontFamily": "{app.fontFamily.surface.subtitle.text}",
-                "lineHeight": "140%",
+                "lineHeight": "{app.lineHeight.surface.subtitle.text}",
                 "fontWeight": "{app.fontWeight.surface.subtitle.text.strong}",
                 "fontSize": "{app.fontSize.surface.subtitle.text}"
               },
@@ -1569,7 +1569,7 @@
             "default": {
               "value": {
                 "fontFamily": "{app.fontFamily.surface.subtitle.symbol}",
-                "lineHeight": "140%",
+                "lineHeight": "{app.lineHeight.surface.subtitle.symbol}",
                 "fontWeight": "{app.fontWeight.surface.subtitle.symbol.default}",
                 "fontSize": "{app.fontSize.surface.subtitle.symbol}"
               },
@@ -1578,7 +1578,7 @@
             "strong": {
               "value": {
                 "fontFamily": "{app.fontFamily.surface.subtitle.symbol}",
-                "lineHeight": "140%",
+                "lineHeight": "{app.lineHeight.surface.subtitle.symbol}",
                 "fontWeight": "{app.fontWeight.surface.subtitle.symbol.strong}",
                 "fontSize": "{app.fontSize.surface.subtitle.symbol}"
               },
@@ -1594,7 +1594,7 @@
                   "value": {
                     "fontFamily": "{app.fontFamily.surface.body.text}",
                     "fontWeight": "{app.fontWeight.surface.body.text.default}",
-                    "lineHeight": "160%",
+                    "lineHeight": "{app.lineHeight.surface.body.text.default}",
                     "fontSize": "{app.fontSize.surface.body.text.sm}"
                   },
                   "type": "typography"
@@ -1603,7 +1603,7 @@
                   "value": {
                     "fontFamily": "{app.fontFamily.surface.body.text}",
                     "fontWeight": "{app.fontWeight.surface.body.text.strong}",
-                    "lineHeight": "160%",
+                    "lineHeight": "{app.lineHeight.surface.body.text.default}",
                     "fontSize": "{app.fontSize.surface.body.text.sm}"
                   },
                   "type": "typography"
@@ -1614,7 +1614,7 @@
                   "value": {
                     "fontFamily": "{app.fontFamily.surface.body.text}",
                     "fontWeight": "{app.fontWeight.surface.body.text.default}",
-                    "lineHeight": "140%",
+                    "lineHeight": "{app.lineHeight.surface.body.text.short}",
                     "fontSize": "{app.fontSize.surface.body.text.sm}"
                   },
                   "type": "typography"
@@ -1623,7 +1623,7 @@
                   "value": {
                     "fontFamily": "{app.fontFamily.surface.body.text}",
                     "fontWeight": "{app.fontWeight.surface.body.text.strong}",
-                    "lineHeight": "140%",
+                    "lineHeight": "{app.lineHeight.surface.body.text.short}",
                     "fontSize": "{app.fontSize.surface.body.text.sm}"
                   },
                   "type": "typography"
@@ -1636,7 +1636,7 @@
                   "value": {
                     "fontFamily": "{app.fontFamily.surface.body.text}",
                     "fontWeight": "{app.fontWeight.surface.body.text.default}",
-                    "lineHeight": "160%",
+                    "lineHeight": "{app.lineHeight.surface.body.text.default}",
                     "fontSize": "{app.fontSize.surface.body.text.md}"
                   },
                   "type": "typography"
@@ -1645,7 +1645,7 @@
                   "value": {
                     "fontFamily": "{app.fontFamily.surface.body.text}",
                     "fontWeight": "{app.fontWeight.surface.body.text.strong}",
-                    "lineHeight": "160%",
+                    "lineHeight": "{app.lineHeight.surface.body.text.default}",
                     "fontSize": "{app.fontSize.surface.body.text.md}"
                   },
                   "type": "typography"
@@ -1656,7 +1656,7 @@
                   "value": {
                     "fontFamily": "{app.fontFamily.surface.body.text}",
                     "fontWeight": "{app.fontWeight.surface.body.symbol.default}",
-                    "lineHeight": "140%",
+                    "lineHeight": "{app.lineHeight.surface.body.text.short}",
                     "fontSize": "{app.fontSize.surface.body.text.md}"
                   },
                   "type": "typography"
@@ -1665,7 +1665,7 @@
                   "value": {
                     "fontFamily": "{app.fontFamily.surface.body.text}",
                     "fontWeight": "{app.fontWeight.surface.body.text.strong}",
-                    "lineHeight": "140%",
+                    "lineHeight": "{app.lineHeight.surface.body.text.short}",
                     "fontSize": "{app.fontSize.surface.body.text.md}"
                   },
                   "type": "typography"
@@ -1766,7 +1766,7 @@
               "value": {
                 "fontFamily": "{app.fontFamily.surface.caption.text}",
                 "fontWeight": "{app.fontWeight.surface.caption.text.default}",
-                "lineHeight": "160%",
+                "lineHeight": "{app.lineHeight.surface.caption.text}",
                 "fontSize": "{app.fontSize.surface.caption.text}"
               },
               "type": "typography"
@@ -1775,7 +1775,7 @@
               "value": {
                 "fontFamily": "{app.fontFamily.surface.caption.text}",
                 "fontWeight": "{app.fontWeight.surface.caption.text.strong}",
-                "lineHeight": "160%",
+                "lineHeight": "{app.lineHeight.surface.caption.text}",
                 "fontSize": "{app.fontSize.surface.caption.text}"
               },
               "type": "typography"
@@ -1786,7 +1786,7 @@
               "value": {
                 "fontFamily": "{app.fontFamily.surface.caption.symbol}",
                 "fontWeight": "{app.fontWeight.surface.caption.symbol.default}",
-                "lineHeight": "160%",
+                "lineHeight": "{app.lineHeight.surface.caption.symbol}",
                 "fontSize": "{app.fontSize.surface.caption.symbol}"
               },
               "type": "typography"
@@ -1795,7 +1795,7 @@
               "value": {
                 "fontFamily": "{app.fontFamily.surface.caption.symbol}",
                 "fontWeight": "{app.fontWeight.surface.caption.symbol.strong}",
-                "lineHeight": "160%",
+                "lineHeight": "{app.lineHeight.surface.caption.symbol}",
                 "fontSize": "{app.fontSize.surface.caption.symbol}"
               },
               "type": "typography"
@@ -1808,7 +1808,7 @@
               "value": {
                 "fontFamily": "{app.fontFamily.surface.footnote.text}",
                 "fontWeight": "{app.fontWeight.surface.footnote.text.default}",
-                "lineHeight": "160%",
+                "lineHeight": "{app.lineHeight.surface.footnote.text}",
                 "fontSize": "{app.fontSize.surface.footnote.text}"
               },
               "type": "typography"
@@ -1817,7 +1817,7 @@
               "value": {
                 "fontFamily": "{app.fontFamily.surface.footnote.text}",
                 "fontWeight": "{app.fontWeight.surface.footnote.text.strong}",
-                "lineHeight": "160%",
+                "lineHeight": "{app.lineHeight.surface.footnote.text}",
                 "fontSize": "{app.fontSize.surface.footnote.text}"
               },
               "type": "typography"
@@ -1828,7 +1828,7 @@
               "value": {
                 "fontFamily": "{app.fontFamily.surface.footnote.symbol}",
                 "fontWeight": "{app.fontWeight.surface.footnote.symbol.default}",
-                "lineHeight": "160%",
+                "lineHeight": "{app.lineHeight.surface.footnote.symbol}",
                 "fontSize": "{app.fontSize.surface.footnote.symbol}"
               },
               "type": "typography"
@@ -1837,7 +1837,7 @@
               "value": {
                 "fontFamily": "{app.fontFamily.surface.footnote.symbol}",
                 "fontWeight": "{app.fontWeight.surface.footnote.symbol.strong}",
-                "lineHeight": "160%",
+                "lineHeight": "{app.lineHeight.surface.footnote.symbol}",
                 "fontSize": "{app.fontSize.surface.footnote.symbol}"
               },
               "type": "typography"
@@ -1851,7 +1851,7 @@
                 "value": {
                   "fontFamily": "{app.fontFamily.surface.code.text}",
                   "fontWeight": "{app.fontWeight.surface.code.text.default}",
-                  "lineHeight": "160%",
+                  "lineHeight": "{app.lineHeight.surface.code.text.sm}",
                   "fontSize": "{app.fontSize.surface.code.text.sm}"
                 },
                 "type": "typography"
@@ -1860,7 +1860,7 @@
                 "value": {
                   "fontFamily": "{app.fontFamily.surface.code.text}",
                   "fontWeight": "{app.fontWeight.surface.code.text.strong}",
-                  "lineHeight": "160%",
+                  "lineHeight": "{app.lineHeight.surface.code.text.sm}",
                   "fontSize": "{app.fontSize.surface.code.text.sm}"
                 },
                 "type": "typography"
@@ -1871,7 +1871,7 @@
                 "value": {
                   "fontFamily": "{app.fontFamily.surface.code.text}",
                   "fontWeight": "{app.fontWeight.surface.code.text.default}",
-                  "lineHeight": "160%",
+                  "lineHeight": "{app.lineHeight.surface.code.text.md}",
                   "fontSize": "{app.fontSize.surface.code.text.md}"
                 },
                 "type": "typography"
@@ -1880,7 +1880,7 @@
                 "value": {
                   "fontFamily": "{app.fontFamily.surface.code.text}",
                   "fontWeight": "{app.fontWeight.surface.code.text.strong}",
-                  "lineHeight": "160%",
+                  "lineHeight": "{app.lineHeight.surface.code.text.md}",
                   "fontSize": "{app.fontSize.surface.code.text.md}"
                 },
                 "type": "typography"
