added app fontWeight control and label

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -2717,6 +2717,98 @@
             }
           }
         }
+      },
+      "control": {
+        "text": {
+          "default": {
+            "value": "{config.fontWeight.medium}",
+            "type": "fontWeights"
+          },
+          "text": {
+            "value": "{config.fontWeight.text}",
+            "type": "fontWeights"
+          },
+          "strong": {
+            "value": "{config.fontWeight.semibold}",
+            "type": "fontWeights"
+          }
+        },
+        "symbol": {
+          "default": {
+            "value": "{config.fontWeight.medium}",
+            "type": "fontWeights"
+          },
+          "text": {
+            "value": "{config.fontWeight.text}",
+            "type": "fontWeights"
+          },
+          "strong": {
+            "value": "{config.fontWeight.bold}",
+            "type": "fontWeights"
+          }
+        },
+        "number": {
+          "default": {
+            "value": "{config.fontWeight.medium}",
+            "type": "fontWeights"
+          },
+          "strong": {
+            "value": "{config.fontWeight.semibold}",
+            "type": "fontWeights"
+          }
+        },
+        "initials": {
+          "default": {
+            "value": "{config.fontWeight.medium}",
+            "type": "fontWeights"
+          },
+          "strong": {
+            "value": "{config.fontWeight.semibold}",
+            "type": "fontWeights"
+          }
+        }
+      },
+      "label": {
+        "text": {
+          "default": {
+            "value": "{config.fontWeight.medium}",
+            "type": "fontWeights"
+          },
+          "strong": {
+            "value": "{config.fontWeight.semibold}",
+            "type": "fontWeights"
+          }
+        },
+        "symbol": {
+          "default": {
+            "value": "{config.fontWeight.medium}",
+            "type": "fontWeights"
+          },
+          "strong": {
+            "value": "{config.fontWeight.bold}",
+            "type": "fontWeights"
+          }
+        },
+        "number": {
+          "default": {
+            "value": "{config.fontWeight.medium}",
+            "type": "fontWeights"
+          },
+          "strong": {
+            "value": "{config.fontWeight.semibold}",
+            "type": "fontWeights"
+          }
+        },
+        "initials": {
+          "default": {
+            "value": "{config.fontWeight.medium}",
+            "type": "fontWeights"
+          },
+          "strong": {
+            "value": "{config.fontWeight.semibold}",
+            "type": "fontWeights"
+          }
+        }
       }
     },
     "lineHeight": {
